Добавлена генерация пакета

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,24 @@ add_executable(ip_print
 
 set_target_properties(ip_print
                         PROPERTIES
-                        CXX_STANDARD 14
+                        CXX_STANDARD 17
                         CXX_STANDARD_REQUIRED ON)
+
+if (MSVC)
+    target_compile_options(ip_print PRIVATE
+        /W4
+)
+else ()
+    target_compile_options(ip_print PRIVATE
+        -Wall -pedantic -Werror
+    )
+endif()
+
+install(TARGETS ip_print RUNTIME DESTINATION bin)
+
+set(CPACK_GENERATOR DEB)
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+set(CPACK_PACKAGE_CONTACT example@example.com)
+include(CPack)
