--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,30 @@
 cmake_minimum_required(VERSION 3.2)
 
 set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
-set(PROJECT_VESRION 0.0.${PATCH_VERSION})
+set(PROJECT_VERSION 0.0.${PATCH_VERSION})
 
-project(IpPrint VERSION ${PROJECT_VERSION})
+project(print_ip VERSION ${PROJECT_VERSION})
 
-add_executable(ip_print
+add_executable(print_ip
                 main.cpp
-                ip_print.h)
+                print_ip.h)
 
-set_target_properties(ip_print
+set_target_properties(print_ip
                         PROPERTIES
                         CXX_STANDARD 17
                         CXX_STANDARD_REQUIRED ON)
 
 if (MSVC)
-    target_compile_options(ip_print PRIVATE
+    target_compile_options(print_ip PRIVATE
         /W4
 )
 else ()
-    target_compile_options(ip_print PRIVATE
+    target_compile_options(print_ip PRIVATE
         -Wall -pedantic -Werror
     )
 endif()
 
-install(TARGETS ip_print RUNTIME DESTINATION bin)
+install(TARGETS print_ip RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
